# pseudomat

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.rst  config.yml  config_example.yml  docker-compose.yml  openapi.yaml  setup.cfg  setup.py
sphinx/: index.rst
src/cli/: __init__.py
src/pseudomat/: common.py
src/pseudomat/cli/: __main__.py  actions.py  argparse.py  commands.py  database.py  files.py  globals.py
src/pseudomat/cli/actions/: __init__.py  common.py  invite.py  invite.py.bak  project.py
src/pseudomat/common/: __init__.py  database.py  exceptions.py  schema_pinvite.yaml  schema_project.yaml  schema_sinvite.yaml  schemas.py
src/pseudomat/srv/: __init__.py  __main__.py  config.py.bak  config_schema.json  config_schema.yaml  database.py  handlers.py  project.py  sendgrid.py
src/pseudomat/srv/actions/: project.py
tests/cli/: test_database.py
tests/common/: test_project.py
tests/pseudomat/common/: README  conftest.py  test_common.py  test_database.py
tests/pseudomat/srv/: conftest.py  test_project.py
