[metadata]
author = Pieter van Beek
author_email = pseudomat.github.com@djinnit.com
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
description = Pseudonymization Service and Command Line Tool
keywords = pseudonymization, aiohttp, async, asyncio, crypto
license = Mozilla Public License Version 2.0
long_description = file: README.rst
name = pseudomat
project_urls =
  Documentation = https://pieterb.github.io/pseudomat
  Source Code = https://github.com/pieterb/pseudomat
url = https://github.com/pieterb/pseudomat
version = attr: common.VERSION


[options]
setup_requires = pytest-runner
install_requires =
  aiohttp
  uvloop;platform_system=="Darwin"
package_dir =
  =src
packages = find:
python_requires = ~=3.5


[options.packages.find]
where=src


[options.extras_require]
dev =
  aiohttp-devtools

  # Recommended by aiohttp docs:
  aiodns   # optional asynchronous DNS client
  cchardet # optional fast character handling in C
docs =
  MacFSEvents
  Sphinx
  sphinx-autobuild
  sphinx-autodoc-typehints
  sphinx-autodoc-napoleon-typehints
  sphinx_rtd_theme
test =
  pytest
  pytest-asyncio
  pytest-cov
