[metadata]
author = Pieter van Beek
author_email = pseudomat.github.com@djinnit.com
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
description = Pseudonymization Service and Command Line Tool
keywords = pseudonymization, aiohttp, async, asyncio, crypto
license = Mozilla Public License Version 2.0
long_description = file: README.rst
name = pseudomat
project_urls =
  Documentation = https://pieterb.github.io/pseudomat
  Source Code = https://github.com/pieterb/pseudomat
url = https://github.com/pieterb/pseudomat
version = attr: pseudomat.common.VERSION


[options]
install_requires =
  aiohttp
  aiopg
  datapunt-config-loader
  jwcrypto
  requests
  sqlalchemy
  uvloop
package_dir =
  =src
packages = find_namespace:
python_requires = ~=3.5


[options.entry_points]
console_scripts =
  pseudomat = pseudomat.cli.__main__:main
  pseudomatd = pseudomat.srv.__main__:main

[options.packages.find]
where=src


[options.extras_require]
dev =
  aiohttp-devtools
  # Recommended by aiohttp docs:
  aiodns    # optional asynchronous DNS client
  cchardet  # optional fast character handling in C
docs =
  MacFSEvents
  Sphinx
  sphinx-autobuild
  sphinx-autodoc-typehints
  sphinx-autodoc-napoleon-typehints
  sphinx_rtd_theme
test =
  pytest
  pytest-asyncio
  pytest-cov
